# pyBotB

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  lint-and-test.yml
docs/: botb_api.md  conf.py  index.rst
docs/_static/: index.html
docs/usage/: api.rst  botb_api.rst  data_classes.rst  index.rst
pybotb/: __init__.py  botb.py  firki.py  types.py  userbot.py  utils.py
tests/: __init__.py  check_api_coverage.py  check_dataclass_compat.py  test_botb_api.py
tools/: README.md  check_dataclass_compat.py  generate_api.py
