[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybotb"
version = "0.0.1"
dependencies = [
	"requests",
	"BeautifulSoup4",
	"pytz",
	"lxml",
]
authors = [
  { name="knuxify", email="knuxify@gmail.com" },
]
maintainers = [
  { name="knuxify", email="knuxify@gmail.com" },
]
description = "Python library for interacting with both the Battle of the Bits API and the site itself"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["botb", "battleofthebits", "Battle of the Bits", "api"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
docs = ["sphinx", "sphinx-autodoc-typehints", "enum-tools[sphinx]", "furo"]
format = ["ruff"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/knuxify/pybotb"
Issues = "https://github.com/knuxify/pybotb/issues"

[tool.ruff]
extend-exclude = ["pb/models/migrations"]
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F"]
ignore = ["D212", "D203", "D205"]
exclude = ["models/migrations"]

[tool.docformatter]
recursive = true
black = true
pre-summary-newline = true

[tool.poe.tasks]
test = "python3 -m pytest"
lint = "ruff check pybotb"
_format = "ruff format pybotb"
docformat = "docformatter pybotb -ir"
format = ["_format", "docformat"]
build-docs = "sphinx-build -M html docs/ docs/_build/"
serve-docs = "sphinx-autobuild docs/ docs/_build/"
