[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybotb"
version = "0.0.1"
dependencies = [
	"BeautifulSoup4",
	"decorator",
	"lxml",
	"pytz",
	"requests",
	"strenum",
	"typing_extensions",
]
authors = [
  { name="knuxify", email="knuxify@gmail.com" },
]
maintainers = [
  { name="knuxify", email="knuxify@gmail.com" },
]
description = "Python library for interacting with both the Battle of the Bits API and the site itself"
readme = "README.md"
license = {file = "COPYING"}
keywords = ["botb", "battleofthebits", "Battle of the Bits", "api"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
docs = ["sphinx", "sphinx-autodoc-typehints", "enum-tools[sphinx]", "furo", "myst-parser"]
format = ["ruff"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/knuxify/pybotb"
Issues = "https://github.com/knuxify/pybotb/issues"

[tool.ruff]
extend-exclude = ["docs"]
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F"]
ignore = ["D212", "D203", "D205", "D105", "D107"]
exclude = ["models/migrations"]

[tool.docformatter]
recursive = true
black = true
close-quotes-on-newline = true
pre-summary-newline = true

[tool.poe.tasks]
test = "python3 -m pytest"
lint = "ruff check ."
build-docs = "sphinx-build -M html docs/ docs/_build/"
serve-docs = "sh -c \"PYTHONPATH=. sphinx-autobuild docs/ docs/_build/\""
check-api-coverage = "sh -c \"PYTHONPATH=. python3 tools/check_api_coverage.py\""
check-dataclass-compat = "sh -c \"PYTHONPATH=. python3 tools/check_dataclass_compat.py\""

[tool.poe.tasks.format]
shell = """
ruff format .
docformatter pybotb -ir || true
ruff check --fix --quiet .
"""
interpreter = "posix"
